Security Changes and Minor Code fixes